# fridgewatch

./: ChangeLog.md  README.md  fridgewatch.cabal  shell.nix
src/: Main.hs
