name:                fridgewatch
version:             0.1.0.0
synopsis:            Allows you to monitor the serial port via HTTP.
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Mikkel Christiansen
maintainer:          mikkel@rheosystems.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable fridgewatch
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8
                     , network
                     , serial
  hs-source-dirs:      src
  default-language:    Haskell2010
